<resources>
    <string name="mesa_pleasewait">Please wait…</string>
    <string name="mesa_cancel">Cancel</string>
    <string name="mesa_ok">OK</string>
    <string name="mesa_yes">Yes</string>
    <string name="mesa_no">No</string>

    <string name="mesa_tab_tts">Tab %1$d of %2$d</string>

    <string name="mesa_latest_version">The latest version is already installed.</string>
    <string name="mesa_new_version_available">A new version is available.</string>
    <string name="mesa_updates_error_phone">"Can't check for updates. Your phone's network connection isn't stable."</string>
    <string name="mesa_updates_error_tablet">"Can't check for updates. Your tablet's network connection isn't stable."</string>
    <string name="mesa_no_network_connection">No network connection</string>

    <string name="mesa_credits">Credits</string>
    <string name="mesa_credits_desc">The following page contains all the libraries/code snippets used in this app.</string>
    <string name="mesa_credits_androidx_title">Android Jetpack Library</string>
    <string name="mesa_credits_androidx_description">"@Google - Licensed with Apache 2.0"</string>
    <string name="mesa_credits_gmaterial_title">Material Components Library</string>
    <string name="mesa_credits_gmaterial_description">"@Google - Licensed with Apache 2.0"</string>
    <string name="mesa_credits_oneui_title">Samsung Experience Software Library</string>
    <string name="mesa_credits_oneui_description">"@Samsung - Licensed with Apache 2.0"</string>
    <string name="mesa_credits_spinkit_title">Android-SpinKit</string>
    <string name="mesa_credits_spinkit_description">"@ybq - Licensed with MIT"</string>
    <string name="mesa_credits_fetch_title">Fetch</string>
    <string name="mesa_credits_fetch_description">"@tonyofrancis - Licensed with Apache 2.0"</string>
    <string name="mesa_credits_waitingdots_title">WaitingDots</string>
    <string name="mesa_credits_waitingdots_description">"@tajchert - Licensed with MIT"</string>





    <string name="mesa_open_source_licence">Open source licenses</string>
    <string name="mesa_update">Update</string>
    <string name="mesa_retry">Retry</string>
    <string name="mesa_version">Version</string>
    <string name="mesa_app_info">App info</string>

    <string name="mesa_downloading">Downloading update…</string>
    <string name="mesa_download_pause">Download paused.</string>
    <string name="mesa_download_failed">Download failed.</string>
    <string name="mesa_waiting_for_network">Waiting for network…</string>



    <string name="sesl_action_bar_up_description">Navigate up</string>
    <string name="sesl_action_menu_overflow_description">More options</string>
    <string name="sesl_toolbar_collapse_description">Collapse</string>

    <string name="sesl_action_mode_done">Done</string>

    <string name="sesl_capital_off">OFF</string>
    <string name="sesl_capital_on">ON</string>
    <string name="sesl_switch">Switch</string>
    <string name="sesl_switch_off">Off</string>
    <string name="sesl_switch_on">On</string>
    <string name="sesl_preference_off">OFF</string>
    <string name="sesl_preference_on">ON</string>

    <string name="sesl_search_hint">Search…</string>
    <string name="sesl_searchview_description_clear">Clear search field</string>
    <string name="sesl_searchview_description_query">Search query</string>
    <string name="sesl_searchview_description_search">Search</string>
    <string name="sesl_searchview_description_submit">Submit query</string>
    <string name="sesl_searchview_description_voice">Voice search</string>

    <string name="sesl_preferencecategory_added_title">Header</string>

    <string name="sesl_color_picker_azure">Azure</string>
    <string name="sesl_color_picker_black">Black</string>
    <string name="sesl_color_picker_blue">Blue</string>
    <string name="sesl_color_picker_brightness">Brightness</string>
    <string name="sesl_color_picker_color_five">Color Five</string>
    <string name="sesl_color_picker_color_four">Color Four</string>
    <string name="sesl_color_picker_color_one">Color One</string>
    <string name="sesl_color_picker_color_six">Color Six</string>
    <string name="sesl_color_picker_color_three">Color Three</string>
    <string name="sesl_color_picker_color_two">Color Two</string>
    <string name="sesl_color_picker_color_wheel">Color wheel</string>
    <string name="sesl_color_picker_current">Current</string>
    <string name="sesl_color_picker_cyan">Cyan</string>
    <string name="sesl_color_picker_dark_azure">Dark Azure</string>
    <string name="sesl_color_picker_dark_blue">Dark Blue</string>
    <string name="sesl_color_picker_dark_cyan">Dark Cyan</string>
    <string name="sesl_color_picker_dark_gray">Dark Gray</string>
    <string name="sesl_color_picker_dark_green">Dark Green</string>
    <string name="sesl_color_picker_dark_magenta">Dark Magenta</string>
    <string name="sesl_color_picker_dark_orange">Dark Orange</string>
    <string name="sesl_color_picker_dark_red">Dark Red</string>
    <string name="sesl_color_picker_dark_spring_green">Dark Spring green</string>
    <string name="sesl_color_picker_dark_violet">Dark Violet</string>
    <string name="sesl_color_picker_dark_yellow">Dark Yellow</string>
    <string name="sesl_color_picker_double_tap_to_select">Double tap to select.</string>
    <string name="sesl_color_picker_gray">Gray</string>
    <string name="sesl_color_picker_green">Green</string>
    <string name="sesl_color_picker_hue_and_saturation">Hue and saturation</string>
    <string name="sesl_color_picker_light_azure">Light Azure</string>
    <string name="sesl_color_picker_light_blue">Light Blue</string>
    <string name="sesl_color_picker_light_cyan">Light Cyan</string>
    <string name="sesl_color_picker_light_gray">Light Gray</string>
    <string name="sesl_color_picker_light_green">Light Green</string>
    <string name="sesl_color_picker_light_magenta">Light Magenta</string>
    <string name="sesl_color_picker_light_orange">Light Orange</string>
    <string name="sesl_color_picker_light_red">Light Red</string>
    <string name="sesl_color_picker_light_spring_green">Light Spring green</string>
    <string name="sesl_color_picker_light_violet">Light Violet</string>
    <string name="sesl_color_picker_light_yellow">Light Yellow</string>
    <string name="sesl_color_picker_magenta">Magenta</string>
    <string name="sesl_color_picker_new">New</string>
    <string name="sesl_color_picker_opacity">Opacity</string>
    <string name="sesl_color_picker_option">Option</string>
    <string name="sesl_color_picker_orange">Orange</string>
    <string name="sesl_color_picker_recently_used_colors">Recently used colors</string>
    <string name="sesl_color_picker_red">Red</string>
    <string name="sesl_color_picker_slider">Slider</string>
    <string name="sesl_color_picker_spring_green">Spring green</string>
    <string name="sesl_color_picker_violet">Violet</string>
    <string name="sesl_color_picker_white">White</string>
    <string name="sesl_color_picker_yellow">Yellow</string>
    <string name="sesl_picker_done">Done</string>

    <string name="sesl_font_family_condensed" translatable="false">sec-roboto-condensed</string>
    <string name="sesl_font_family_regular" translatable="false">sec-roboto-light</string>
    <string name="sesl_appbar_scrolling_view_behavior" translatable="false">com.samsung.android.ui.appbar.SeslAppBarLayout$ScrollingViewBehavior</string>

</resources>
