<?xml version="1.0" encoding="utf-8"?>
<com.samsung.android.ui.widget.SeslNestedScrollView android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true" app:layout_behavior="@string/sesl_appbar_scrolling_view_behavior"
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:id="@+id/mesa_aboutlayout_baseaboutactivity" android:layout_width="fill_parent" android:layout_height="fill_parent" android:nestedScrollingEnabled="true">

        <LinearLayout android:orientation="vertical" android:id="@+id/mesa_appinfolayout_baseaboutactivity" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true">
                <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/mesa_upperlayout_appinfolayout_baseaboutactivity" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <View android:id="@+id/mesa_emptyviewtop_appinfolayout_baseaboutactivity" android:layout_width="fill_parent" android:layout_height="wrap_content" />

                    <TextView android:textSize="@dimen/mesa_appname_text_baseaboutactivity" android:textColor="?primaryTextColor" android:id="@+id/mesa_appname_appinfolayout_baseaboutactivity" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:fontFamily="sans-serif-light" android:textAlignment="center" />
                    <TextView android:textSize="@dimen/mesa_version_text_baseaboutactivity" android:textStyle="normal" android:textColor="@color/mesa_app_version_text_baseaboutactivity" android:gravity="center" android:id="@+id/mesa_versiontextview_appinfolayout_baseaboutactivity" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:fontFamily="@string/sesl_font_family_regular" />

                    <ProgressBar android:layout_gravity="center" android:id="@+id/mesa_progress_appinfolayout_baseaboutactivity" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                    <TextView android:textSize="@dimen/mesa_version_text_baseaboutactivity" android:textColor="@color/mesa_app_version_text_baseaboutactivity" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@+id/mesa_versionnotice_appinfolayout_baseaboutactivity" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mesa_latest_version" android:fontFamily="@string/sesl_font_family_regular" android:layout_marginHorizontal="16.0dip" />
                    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center" android:orientation="horizontal" android:layout_marginTop="10.0dip" android:weightSum="100.0">
                        <androidx.appcompat.widget.AppCompatButton android:id="@+id/mesa_updatebutton_appinfolayout_baseaboutactivity" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="60.0" android:minHeight="44.0dip" android:layout_gravity="center_horizontal" android:gravity="center" android:background="@drawable/mesa_aboutactivity_button_bg" app:backgroundTint="?colorPrimary" android:text="@string/mesa_update" android:textColor="@color/sesl_white" android:textSize="17.0sp" android:textStyle="bold" android:ellipsize="end" android:maxLines="1" android:fontFamily="@string/sesl_font_family_regular" android:visibility="gone" android:focusable="true" />
                    </LinearLayout>

                    <View android:id="@+id/mesa_emptyviewmiddle_appinfolayout_baseaboutactivity" android:layout_width="fill_parent" android:layout_height="wrap_content" />

                    <LinearLayout android:gravity="bottom|center" android:orientation="vertical" android:id="@+id/mesa_lowerlayout_baseaboutactivity" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
                        <androidx.appcompat.widget.AppCompatButton android:textSize="17.0sp" android:textStyle="bold" android:textColor="?primaryTextColor" android:ellipsize="end" android:id="@+id/mesa_creditsbtn_lowerlayout_baseaboutactivity" android:background="@drawable/mesa_aboutactivity_button_bg" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="44.0dip" android:text="@string/mesa_credits" android:maxLines="2" android:fontFamily="@string/sesl_font_family_regular" android:paddingStart="18.0dip" android:paddingEnd="18.0dip" app:backgroundTint="@color/mesa_bottombtn_bg_baseaboutactivity" />
                        <androidx.appcompat.widget.AppCompatButton android:textSize="17.0sp" android:textStyle="bold" android:textColor="?primaryTextColor" android:ellipsize="end" android:id="@+id/mesa_opensourcebtn_lowerlayout_baseaboutactivity" android:background="@drawable/mesa_aboutactivity_button_bg" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:minHeight="44.0dip" android:text="@string/mesa_open_source_licence" android:maxLines="2" android:fontFamily="@string/sesl_font_family_regular" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" app:backgroundTint="@color/mesa_bottombtn_bg_baseaboutactivity" />
                        <View android:id="@+id/mesa_emptyviewbottom_lowerlayout_baseaboutactivity" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/mesa_weblinklayout_baseaboutactivity" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <androidx.appcompat.widget.AppCompatButton android:textSize="17.0sp" android:textStyle="bold" android:textColor="?primaryTextColor" android:ellipsize="end" android:gravity="center" android:id="@+id/mesa_creditsbtn_baseaboutactivity" android:background="@drawable/mesa_aboutactivity_button_bg" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="44.0dip" android:text="@string/mesa_credits" android:maxLines="2" android:fontFamily="@string/sesl_font_family_regular" android:paddingStart="18.0dip" android:paddingEnd="18.0dip" app:backgroundTint="@color/mesa_bottombtn_bg_baseaboutactivity" />
            <androidx.appcompat.widget.AppCompatButton android:textSize="17.0sp" android:textStyle="bold" android:textColor="?primaryTextColor" android:ellipsize="end" android:gravity="center" android:id="@+id/mesa_opensourcebtn_baseaboutactivity" android:background="@drawable/mesa_aboutactivity_button_bg" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:minHeight="44.0dip" android:text="@string/mesa_open_source_licence" android:maxLines="2" android:fontFamily="@string/sesl_font_family_regular" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" app:backgroundTint="@color/mesa_bottombtn_bg_baseaboutactivity" />
        </LinearLayout>
    </LinearLayout>
</com.samsung.android.ui.widget.SeslNestedScrollView>